<resources>

    <string name="app_name">四川省人才网</string>
    <string name="hello_world">四川省人才网app!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">四川省人才网</string>

    <!-- title -->
    <string name="titlebar_img_btn_left_desc">标题栏左边按钮</string>
    <string name="titlebar_img_btn_right_desc">标题栏右边按钮</string>
    <!-- deloge -->
    <string name="loading">加载中...</string>
    <!-- 主页 -->
    <string name="homeActivityTitle">四川省人才网</string>
    <string name="homeactivityhint">请输入关键字</string>
    <string name="jobsearchTitle">职位搜索</string>
    <string name="jobsearchResult">搜索结果</string>

    <!-- 个人中心 -->
    <string name="personalActivityTitle">个人中心</string>
    <string name="userName">用户名：</string>
    <string name="postAppRecord">职位申请记录</string>
    <string name="postCollRecord">职位收藏记录</string>
    <string name="companyProfile">公司简介</string>
    <string name="jobDescription">职位描述</string>
    <string name="readMyResume">谁看过我的简历</string>
    <string name="invitationsForInterviews">我的面试邀请</string>
    <string name="jobIntentions">我的招聘意向</string>
    <string name="interviewNotice">面试通知</string>
    <string name="myAppliedJob">我申请的职位</string>
    <string name="myCollectedJob">我收藏的职位</string>
    <!-- 简历管理 -->
    <string name="updateDate">更新于</string>
    <string name="finishStatus">完成度</string>
    <string name="editResume">编辑简历</string>
    <string name="modify"><u>修改</u></string>
    <string name="delete"><u>删除</u></string>
    <string name="preview"><u>预览</u></string>
    <string name="refresh"><u>刷新</u></string>
    <string name="set_public"><u>公开</u></string>
    <string name="is_public">是否公开</string>
    <string name="resumeManageActivityTitle">简历管理</string>
    <string name="resumeName">简历名称</string>
    <string name="resumeRequired">必填项</string>
    <string name="resumeNote1">(完成以下项即可申请职位)</string>
    <string name="resumeOptional">选填项</string>
    <string name="resumeNote2">(补充以下内容，更全面的展示自己)</string>
    <string name="resumeEditActivityTitle">简历修改</string>
    <string name="resumePreviewActivityTitle">简历预览</string>
    <string name="personalInfoActivityTitle">个人信息</string>
    <string name="personalName">姓名</string>
    <string name="paperInfoNote">证件信息</string>
    <string name="BasicInfoEditActivityTitle">编辑基本信息</string>
    <string name="ProvincesActivityTitle">编辑个人简介</string>
    <string name="JobIntentionListActivityTitle">求职意向</string>
    <string name="JobIntentionEditActivityTitle">编辑求职意向</string>
    <string name="ContactWayEditActivityTitle">编辑联系方式</string>
    <string name="EducationExperienceEditActivityTitle">编辑教育情况</string>
    <string name="WorkExperienceEditActivityTitle">编辑职业生涯</string>
    <string name="WorkPerformanceEditActivityTitle">编辑工作经验</string>
    <string name="ResumeCreateActivityTitle">创建简历</string>
    <string name="reccontent">推荐自己：</string>
    <string name="specialtyContent">特长：</string>
    <string name="personalResume">个人经历：</string>
    <string name="reccontent_hint">请输入推荐的内容（不超过100个字）</string>
    <string name="specialtyContent_hint">请输入您的特长（不超过100个字）</string>
    <string name="personalResume_hint">请输入您的个人经历（不超过3500个字）</string>
    <string name="work_performance_hint">请输入您的工作经验（不超过5000个字）</string>

    <!-- 办事指南 -->
    <string name="workDirectionActivityTitle">办事指南</string>
    <string name="downLoadListActivityTitle">相关资料下载</string>
    <!-- 登陆 -->
    <string name="loginActivityTitle">登录</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="username_label">账号：</string>
    <string name="password_label">密码：</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login_logo_description">掌上调度logo</string>
    <string name="login">登 录</string>
    <string name="registerNow"><u>立即注册</u></string>
    <string name="copyright">Copyright © 2014 HelloWorld.All Rights Reserved</string>

    <!-- 薪酬调查 -->
    <string name="salarySurvey">薪酬调查</string>
    <string name="salarySurveyQuery">薪酬查询</string>
    <string name="salarySurveyQueryList">查询结果</string>
    <string name="selectForeignLanguage">外语能力</string>
    <string name="jobExperience">职场经历</string>
    <string name="salarySurveyQuery_username">你参与调查的ID号</string>
    <string name="salarySurveyQuery_password">你参与调查的密码</string>

    <string name="salarySurvey_username">该ID用于薪酬查询</string>
    <string name="salarySurvey_password">该密码用于薪酬查询</string>
    
    <!-- 更多 -->
    <string name="moreActivityTitle">更多</string>
    <string name="feedback">用户反馈</string>
    <string name="feedbackTitle">欢迎您提出宝贵的意见和建议，您留下的每个字都将用来改善我们的软件。</string>
    <string name="feedbackHint">请输入您的反馈意见（500字以内）</string>
    <string name="emailHint">您的邮箱（选填）</string>
    <string name="about">四川省人才交流中心\n网站手机版软件系统</string>

    <!-- 信息咨询 -->
    <string name="information_query">信息资讯</string>
    <string name="search_hint">最多输入三个关键字，用空格隔开</string>
    <string name="interview">面试</string>
    <string name="change_job">跳槽</string>

    <!-- 注册 -->
    <string name="registerTitle">注册</string>
    <string name="register_username_label">用  户  名 </string>
    <string name="register_password_label">密        码 </string>
    <string name="register_repassword_label">确认密码</string>
    <string name="register_email_label">    Email  </string>
    <string name="register_username_hint">至少4位字母或数字</string>
    <string name="register_password_hint">6到16位字符</string>
    <string name="register_repassword_hint">请重新输入密码</string>
    <string name="register_email_hint">您常用的Email</string>
    <string name="register_hint">必填项</string>
    <string name="register_hint2">选填项</string>

    <!-- 修改密码 -->
    <string name="change_password">修改密码</string>
    <string name="current_password_hint">当前密码</string>
    <string name="current_password_hint2">请输入当前密码</string>
    <string name="new_password_hint">新密码</string>
    <string name="new_password_hint2">6~16位数字字母</string>
    <string name="submit">提交</string>

    <!-- 职位搜素 -->
    <string name="select_industry">选择行业</string>
    <string name="select_job">选择职能</string>
    <string name="apply">申请</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>

    <!-- 现场招聘会 -->
    <string name="recentRecruiment">近期招聘</string>
    <string name="load_tips">正在地址加载...</string>
    <string name="RecruitmentActivityTitle">现场招聘会</string>
    <string name="RecruitmentCompanyListActivityTitle">参会单位列表</string>

    <!-- 档案查询 -->
    <string name="ArchivesQueryActivityTitle">档案查询</string>
    <string name="downloading">正在下载...</string>
    <string name="cancel">取消</string>

    <!-- 更新版本 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <!-- 消息订阅 -->
    <string name="subscribe_name">订阅名称</string>
    <string name="subscribe_name_hint">点击输入</string>
    <string name="key_words">关键词（多个关键词用英文逗号隔开）</string>
    <string name="key_words_hint">如:职位名称、公司名称、工作地点等</string>
    <string name="subscribeActivityTitle">订阅</string>

    <!-- 分享用到的字符串 -->
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <!-- <string name="RecruitmentCompanyListActivityTitle">参会单位列表</string> -->
    <string name="archivers_explain">查询结果仅为简要信息，数据并非实时更新，如需及时查询是否到档请致电028-86130505</string>
    <!-- 忘记密码 -->
    <string name="forgetPassword"><u>忘记密码</u></string>
    <string name="forgetPasswordTitle">找回密码</string>
    <string name="forget_password_user_name_hint">请输入您的用户名</string>
    <string name="forget_password_email_hint">请输入注册时使用的邮箱</string>
    <string name="forget_password_ok">确定</string>
    
    <!--  -->
    <string name="nessary">*</string>

</resources>