<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/reccontent"
        android:textColor="@color/blue"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/reccontent_edit"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:background="@drawable/search_edittext_bg"
        android:hint="@string/reccontent_hint"
        android:padding="10dp"
        android:maxLength="200" 
        android:textColor="#3B3B3B"
        android:textSize="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/specialtyContent"
        android:textColor="@color/blue"
        android:textSize="16dp" />
   <EditText
        android:id="@+id/specialtyContent_edit"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:maxLength="200" 
        android:background="@drawable/search_edittext_bg"
        android:hint="@string/specialtyContent_hint"
        android:padding="10dp"
        android:textColor="#3B3B3B"
        android:textSize="16dp" />

</LinearLayout>