<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/linear_layout"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:text="@string/current_password_hint"
                android:padding="10dp" />

            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/current_password_hint2"
                android:inputType="textPassword"
                android:padding="10dp" />
        </TableRow>
        
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/linear_layout"
            android:orientation="horizontal" >

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:text="@string/new_password_hint"
                android:padding="10dp" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/new_password_hint2"
                android:inputType="textPassword"
                android:padding="10dp" />
        </TableRow>

        
	<TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/linear_layout"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:text="@string/current_password_hint"
                android:padding="10dp" />

            <EditText
                android:id="@+id/new_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:hint="@string/register_repassword_hint"
                android:inputType="textPassword"
                android:padding="10dp" />
        </TableRow>
       


    <Button
        android:id="@+id/change_password_submit"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button_selector"
        android:enabled="true"
        android:shadowColor="#7f000000"
        android:shadowDx="0.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="18sp" />


</TableLayout>