<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:background="@color/transparent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="1dp"
        android:background="#7f7f0000"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/apply"
        android:textColor="@color/lightBlack"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="1dp"
        android:background="#7f5f0000"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/collect"
        android:textColor="@color/lightBlack"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#7fff0000"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/share"
        android:textColor="@color/lightBlack"
        android:textSize="15sp" />
    
</LinearLayout>