<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/linear_layout"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="textUri|textMultiLine"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
            android:maxLength="16"
            android:background="@null"
            android:drawableLeft="@drawable/user_name_img"
            android:drawablePadding="10dp"
            android:hint="@string/forget_password_user_name_hint"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_hint"
            android:textColor="@color/blue" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/linear_layout"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:maxLength="16"
            android:background="@null"
            android:drawableLeft="@drawable/email_img"
            android:drawablePadding="10dp"
            android:hint="@string/forget_password_email_hint"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_hint"
            android:textColor="@color/blue" />
    </TableRow>

    

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button_selector"
        android:enabled="true"
        android:shadowColor="#7f000000"
        android:shadowDx="0.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="@string/forget_password_ok"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</TableLayout>