<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/feedbackTitle"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:background="@drawable/search_edittext_bg"
        android:hint="@string/feedbackHint"
        android:padding="10dp"
        android:textColor="#3B3B3B"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:singleLine="true"
        android:background="@drawable/search_edittext_bg"
        android:hint="@string/emailHint"
        android:textColor="#6E6E6E"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_button_selector"
        android:enabled="true"
        android:shadowColor="#7f000000"
        android:shadowDx="0.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="提交"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>